k8s/qa/func/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  generation: 1
  name: dashboard
  namespace: func
spec:
  rules:
  - host: func-dashboard.razorpay.in
    http:
      paths:
      - path: /
        backend:
          serviceName: dashboard
          servicePort: 80
  - host: func-dashboard-hdfc.razorpay.in
    http:
      paths:
      - path: /
        backend:
          serviceName: dashboard
          servicePort: 80
